Add box container logic.

--- a/08/exercise01/index.html
+++ b/08/exercise01/index.html
@@ -16,8 +16,11 @@
     <a href="http://placekitten.com">Place Kitten</a><br>
     <a href="http://placekitten.com">Place Kitten</a><br>
     <a href="http://placekitten.com">Place Kitten</a><br>
+  </div>
 
-
+  <div class="box-container">
+    <input type="text" value="0" id="number-input">
+    <button>Click Me</button>
   </div>
 </body>
 </html>
