Add button logic for backgrounds

--- a/08/exercise01/index.html
+++ b/08/exercise01/index.html
@@ -6,16 +6,21 @@
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
+<style>
+
+body.single-click {
+  background-color: purple;
+}
+
+body.double-click {
+  background-color: orange;
+}
+
+</style>
   <div class="container">
     <h1>Hello World</h1>
 
-    <a href="http://placekitten.com">Place Kitten</a><br>
-    <a href="http://placekitten.com">Place Kitten</a><br>
-    <a href="http://placekitten.com">Place Kitten</a><br>
-    <a href="http://placekitten.com">Place Kitten</a><br>
-    <a href="http://placekitten.com">Place Kitten</a><br>
-    <a href="http://placekitten.com">Place Kitten</a><br>
-    <a href="http://placekitten.com">Place Kitten</a><br>
+    <button id="a-button">Click me I suppose</button>
   </div>
 
   <div class="box-container">
