--- a/17/index.html
+++ b/17/index.html
@@ -2,15 +2,28 @@
 <html>
 <head>
   <title>Awesome TODO</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
   <!-- Latest compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCHw0ipRl6WdyTJxqm-7zTW1ng9DtAj0UI",
+      authDomain: "in-class-todo-list.firebaseapp.com",
+      databaseURL: "https://in-class-todo-list.firebaseio.com",
+      projectId: "in-class-todo-list",
+      storageBucket: "",
+      messagingSenderId: "498770105428"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script src="app.js"></script>
 </head>
 <body>
 
@@ -33,33 +46,21 @@
             <div class="form-group">
               <label for="todo-description" class="col-sm-2 control-label">Description</label>
               <div class="col-sm-10">
-                <textarea class="form-control" rows="3"></textarea>
+                <textarea class="form-control" id="todo-description" rows="3"></textarea>
               </div>
             </div>
             <div class="form-group">
               <div class="col-sm-2"></div>
               <div class="col-sm-10">
-                <button type="submit" class="btn btn-default">Add Item</button>
+                <button type="submit" id="add-item-btn" class="btn btn-default">Add Item</button>
               </div>
             </div>
           </form>
         </div>
       </div>
 
-      <div class="panel panel-default">
-        <div class="panel-heading">Buy Milk</div>
-        <div class="panel-body">
-          I need milk for this pie I'm making
-        </div>
-        <div class="panel-footer"><strong>Not Complete</strong> (<a href="#" class="mark-completed">Mark as Completed</a>)</div>
-      </div>
+      <div id="todo-items">
 
-      <div class="panel panel-default">
-        <div class="panel-heading">Find Pie Recipe</div>
-        <div class="panel-body">
-          I need to make a pie for this thing
-        </div>
-        <div class="panel-footer"><strong>Completed 7/4/2017 4:30pm</strong></div>
       </div>
   </div>
 </div>
